[package]
name = "jira-comment"
version = "0.1.0"
authors = ["PeterReid <peter.d.reid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
base64 = "0.11.0"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }